--- a/index.html
+++ b/index.html
@@ -6,23 +6,29 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+  
     <div id="interface">
-        <header>
+
+    <header id="cabecalho">
     <hgroup>
-        <h1 style="text-align: center;">A Importância do Prêmio Nobel</h1>
-        <h2>Resumo</h2>
+      <h1>A Importância do Prêmio Nobel</h1>
+      <h2>Resumo</h2>
     </hgroup>
 
-    
-    <img src="_Imagens/Premio Nobel Paz.jpg">
+    <img id="icone" src="_Imagens/Premio Nobel Paz.jpg">
 
-    Menu Principal
-    -HOME
-    -ESPECIFICAÇÕES
-    -FOTOS
-    -MULTIMIDIA
-    -FALE CONOSCO
-      </header>
+    <nav id="menu">
+      <h1>Menu Principal</h1>
+          <ul type="circo">
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="indexEspecificacoes.html">ESPECIFICAÇÕES</a></li>
+              <li><a href="indexFotos.html">FOTOS</a></li>
+              <li><a href="indexMultimidia.html">MULTIMIDIA</a></li>
+              <li><a href="indexFale.html">FALE CONOSCO</a></li>
+          </ul>
+    </nav>
+    </header>
+
 
     <hgroup> 
     <h3>Tecnologia &nbsp; > &nbsp; Inovação</h3>  
@@ -31,20 +37,18 @@
     <h3>Atualizado em 27/05/2025</h3>
     </hgroup>
 
-    <figure class="foto-legenda">
 
-      <img src="_Imagens/Martin_Luther_King,_Jr..jpg">
+    <figure class="foto-legenda">
+      <a href="https://pt.wikipedia.org/wiki/Martin_Luther_King_Jr." target="_blank"><img src="_Imagens/Martin_Luther_King,_Jr..jpg"></a>
 
       <figcaption>
-
-        <h3 style="text-align: center;">Martin Luther King</h3>
-        <p style="text-align: center; font-family: arial; text-align: justify;" >Martin Luther King Jr. ganhou o Prêmio Nobel da Paz em 1964 por sua liderança no movimento pelos direitos 
+        <h3 style="text-align: center; text-shadow:  2px 2px black; font-family: arial;" >Martin Luther King</h3>
+        <p style="text-align: center; font-family: arial; text-align: justify; text-shadow: 2px 2px 2px black;" >Martin Luther King Jr ganhou o Prêmio Nobel da Paz em 1964 por sua liderança no movimento pelos direitos 
         civis nos Estados Unidos, que lutava contra a segregação racial e a injustiça social através de métodos pacíficos. 
         Ele foi reconhecido por sua defesa dos direitos dos afro-americanos e sua luta pela igualdade racial e racial, com base na não violência</p>
-
       </figcaption>
-
     </figure>
+
 
     <h1 style="text-align: center;"><u>O Prêmio Nobel</u></h1>
     <p style="text-align: justify; text-indent: 50px;"> É um dos reconhecimentos mais prestigiados do mundo,
@@ -72,7 +76,7 @@
     prestígio ajudam a destacar a relevância da ciência, da cultura e da cooperação internacional na construção de um mundo
     melhor.
 
-    Assim, o <b>Prêmio Nobel</b> não apenas homenageia feitos notáveis, mas também reforça a ideia de que conhecimento, inovação e
+    Assim, o <a href="https://pt.wikipedia.org/wiki/Laureados_com_o_Nobel" target="_blank"><b>Prêmio Nobel</b></a> não apenas homenageia feitos notáveis, mas também reforça a ideia de que conhecimento, inovação e
     solidariedade são pilares essenciais para o desenvolvimento da humanidade.</p>
 
 
@@ -80,8 +84,8 @@
       &lt; &gt; &le; &ge; &pound; &yen; &euro; &copy; &reg; &trade; &permil; &real; &times; &radic; &ne; &lambda; &omega; &larr; &rarr;  &darr; &harr; &uarr;
     </p>
     
-    </div>
-  </body>
+  </div>
+</body>
 </html>
 
 
