--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Premio Nobel da Paz e Estudos Importantes</title>
     <link rel="stylesheet" href="style.css">
   </head>
+  <script src="_cod/java.js"></script>
   <body>
   
     <div id="interface">
@@ -20,11 +21,11 @@
     <nav id="menu">
       <h1>Menu Principal</h1>
           <ul type="circo">
-              <li><a href="index.html">HOME</a></li>
-              <li><a href="indexEspecificacoes.html">ESPECIFICAÇÕES</a></li>
-              <li><a href="indexFotos.html">FOTOS</a></li>
-              <li><a href="indexMultimidia.html">MULTIMIDIA</a></li>
-              <li><a href="indexFale.html">FALE CONOSCO</a></li>
+              <li onmouseover="mudaFoto('_Imagens/Premio Nobel Paz.jpg')" onmouseout="mudaFoto('_Imagens/Home.jpg')"><a href="index.html">HOME</a></li>
+              <li onmouseover="mudaFoto('_Imagens/Multimidia.jpg')" onmouseout="mudaFoto('_Imagens/Home.jpg')"><a href="indexEspecificacoes.html">ESPECIFICAÇÕES</a></li>
+              <li onmouseover="mudaFoto('_Imagens/Multimidia.jpg')" onmouseout="mudaFoto('_Imagens/Home.jpg')"><a href="indexFotos.html">FOTOS</a></li>
+              <li onmouseover="mudaFoto('_Imagens/Multimidia.jpg')" onmouseout="mudaFoto('_Imagens/Home.jpg')"><a href="indexMultimidia.html">MULTIMIDIA</a></li>
+              <li onmouseover="mudaFoto('_Imagens/FaleConosco.jpg')" onmouseout="mudaFoto('_Imagens/Home.jpg')"><a href="indexFale.html">FALE CONOSCO</a></li>
           </ul>
     </nav>
     </header>
