--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <nav id="menu">
       <h1>Menu Principal</h1>
           <ul type="circo">
-              <li onmouseover="mudaFoto('_Imagens/Premio Nobel Paz.jpg')" onmouseout="mudaFoto('_Imagens/Home.jpg')"><a href="index.html">HOME</a></li>
-              <li onmouseover="mudaFoto('_Imagens/Multimidia.jpg')" onmouseout="mudaFoto('_Imagens/Home.jpg')"><a href="indexEspecificacoes.html">ESPECIFICAÇÕES</a></li>
-              <li onmouseover="mudaFoto('_Imagens/Multimidia.jpg')" onmouseout="mudaFoto('_Imagens/Home.jpg')"><a href="indexFotos.html">FOTOS</a></li>
-              <li onmouseover="mudaFoto('_Imagens/Multimidia.jpg')" onmouseout="mudaFoto('_Imagens/Home.jpg')"><a href="indexMultimidia.html">MULTIMIDIA</a></li>
-              <li onmouseover="mudaFoto('_Imagens/FaleConosco.jpg')" onmouseout="mudaFoto('_Imagens/Home.jpg')"><a href="indexFale.html">FALE CONOSCO</a></li>
+              <li onmouseover="mudaFoto('_Imagens/Premio Nobel Paz.jpg')" onmouseout="mudaFoto('_Imagens/Premio Nobel Paz.jpg')"><a href="index.html">HOME</a></li>
+              <li onmouseover="mudaFoto('_Imagens/Malala.jpeg')" onmouseout="mudaFoto('_Imagens/Premio Nobel Paz.jpg')"><a href="indexEspecificacoes.html">ESPECIFICAÇÕES</a></li>
+              <li onmouseover="mudaFoto('_Imagens/Multimidia.jpg')" onmouseout="mudaFoto('_Imagens/Premio Nobel Paz.jpg')"><a href="indexFotos.html">FOTOS</a></li>
+              <li onmouseover="mudaFoto('_Imagens/Multimidia.jpg')" onmouseout="mudaFoto('_Imagens/Premio Nobel Paz.jpg')"><a href="indexMultimidia.html">MULTIMIDIA</a></li>
+              <li onmouseover="mudaFoto('_Imagens/FaleConosco.jpg')" onmouseout="mudaFoto('_Imagens/Premio Nobel Paz.jpg')"><a href="indexFale.html">FALE CONOSCO</a></li>
           </ul>
     </nav>
     </header>
@@ -123,8 +123,4 @@
 
 
 
-<p id="Simb">Simbolos teste
-  &lt; &gt; &le; &ge; &pound; &yen; &euro; &copy; &reg; &trade; &permil; &real; &times; &radic; &ne; &lambda; &omega; &larr; &rarr;  &darr; &harr; &uarr;
-</p>
-//WBR é usado para quebra de palaras enquanto &shy; quebra ela por cilabas
 
